nextcloud/mariadb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nextcloud
  name: mariadb 
  labels:
    app: mariadb 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb 
  template:
    metadata:
      labels:
        app: mariadb 
    spec:
      containers:
      - name: mariadb 
        image: mariadb:latest 
        ports:
          - containerPort: 3306 
        args:
          - --transaction-isolation=READ-COMMITTED
          - --binlog-format=ROW
          - --max-connections=1000
