nextcloud/nextcloud-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nextcloud
  name: nextcloud 
  labels:
    app: nextcloud 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud 
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - image: nextcloud
          name: nextcloud 
          ports:
            - containerPort: 80
