nextcloud/redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nextcloud
  name: redis
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - image: redis:alpine
          name: redis
          ports:
            - containerPort: 6379
      restartPolicy: Always
