nextcloud/nextcloud-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nextcloud
  labels:
    app: nextcloud
  name: nextcloud
spec:
  type: ClusterIP
  ports:
    - name: nextcloud
      port: 80
      targetPort: 80
  selector:
    app: nextcloud

---

apiVersion: v1
kind: Service
metadata:
  name: nextcloud-exporter
  namespace: nextcloud
  labels:
    app: nextcloud-exporter
spec:
  selector:
    app: nextcloud
  ports:
    - name: metrics
      port: 9205
      targetPort: 9205
