nextcloud/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nextcloud
  name: redis
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
